--- a/openacademy/views/views.xml
+++ b/openacademy/views/views.xml
@@ -1,20 +1,47 @@
 <odoo>
-    <!-- explicit list view definition -->
-<!--
-    <record model="ir.ui.view" id="openacademy.list">
-      <field name="name">openacademy list</field>
-      <field name="model">openacademy.openacademy</field>
+    <record model="ir.ui.view" id="course_form_view">
+      <field name="name">course.form</field>
+      <field name="model">openacademy.course</field>
       <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
+        <form string="Course Form">
+          <sheet>
+            <group>
+              <field name="name"/>
+            </group>
+          </sheet>
+          <notebook>
+            <page string="Description">
+              <field name="description"/>
+            </page>
+            <page string="About">
+              This is a example of notebooks
+            </page>
+          </notebook>
+        </form>
+      </field>
+    </record>
+
+    <record model="ir.ui.view" id="course_list_view">
+      <field name="name">course.list</field>
+      <field name="model">openacademy.course</field>
+      <field name="arch" type="xml">
+        <tree string="Course Tree">
+              <field name="name" string="Name Tree"/>
+              <field name="description"/>
         </tree>
       </field>
     </record>
--->
 
-    <!-- actions opening views on models -->
+    <record model="ir.ui.view" id="course_search_view">
+      <field name="name">course.search</field>
+      <field name="model">openacademy.course</field>
+      <field name="arch" type="xml">
+        <search string="Course Search">
+              <field name="name" string="Name Search"/>
+              <field name="description"/>
+        </search>
+      </field>
+    </record>
 
     <record model="ir.actions.act_window" id="course_list_action">
       <field name="name">Courses</field>
@@ -25,39 +52,7 @@
       </field>
     </record>
 
-
-    <!-- server action to the one above -->
-<!--
-    <record model="ir.actions.server" id="openacademy.action_server">
-      <field name="name">openacademy server</field>
-      <field name="model_id" ref="model_openacademy_openacademy"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": model._name,
-        }
-      </field>
-    </record>
--->
-
-    <!-- Top menu item -->
-
     <menuitem name="Open Academy" id="main_openacademy_menu"/>
     <menuitem name="Open Academy" id="openacademy_menu" parent="main_openacademy_menu"/>
     <menuitem name="Courses" id="course_menu" parent="openacademy_menu" action="course_list_action"/>
-
-    <!-- menu categories -->
-<!--
-    <menuitem name="Menu 1" id="openacademy.menu_1" parent="openacademy.menu_root"/>
-    <menuitem name="Menu 2" id="openacademy.menu_2" parent="openacademy.menu_root"/>
--->
-    <!-- actions -->
-<!--
-    <menuitem name="List" id="openacademy.menu_1_list" parent="openacademy.menu_1"
-              action="openacademy.action_window"/>
-    <menuitem name="Server to list" id="openacademy" parent="openacademy.menu_2"
-              action="openacademy.action_server"/>
--->
 </odoo>
