[REF] openacademy: Add relation fields

--- a/openacademy/views/views.xml
+++ b/openacademy/views/views.xml
@@ -54,7 +54,7 @@
 
     <!-- actions opening views on models -->
     <record model="ir.actions.act_window" id="course_list_action">
-      <field name="name">Courses - Fausto</field>
+      <field name="name">Courses</field>
       <field name="res_model">openacademy.course</field>
       <field name="view_mode">tree,form</field>
       <field name="help" type="html">
@@ -107,7 +107,6 @@
     <record model="ir.actions.act_window" id="session_list_action">
         <field name="name">Sessions</field>
         <field name="res_model">openacademy.session</field>
-        <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
     </record>
     <menuitem id="session_menu" name="Sessions" parent="openacademy_menu" action="session_list_action"/>
