--- a/openacademy/views/views.xml
+++ b/openacademy/views/views.xml
@@ -54,7 +54,7 @@
 
     <!-- actions opening views on models -->
     <record model="ir.actions.act_window" id="course_list_action">
-      <field name="name">Courses</field>
+      <field name="name">Courses - Titulo</field>
       <field name="res_model">openacademy.course</field>
       <field name="view_mode">tree,form</field>
       <field name="help" type="html">
@@ -62,12 +62,10 @@
       </field>
     </record>
     <!-- Top menu item -->
-    <menuitem name="Open Academy" id="main_opendacademy_menu"/>
+    <menuitem name="Open Academy" id="main_openacademy_menu"/>
     <!-- menu categories -->
-    <menuitem name="Open Academy" id="openacademy_menu" parent="main_opendacademy_menu"/>
-    <menuitem name="Courses"  id="courses_menu"  parent="openacademy_menu" action="course_list_action"/>
-    
-
+    <menuitem name="Open Academy - M "   id="openacademy_menu" parent="main_openacademy_menu"/>
+    <menuitem name="Courses - M "        id="courses_menu"     parent="openacademy_menu"          action="course_list_action"/>
 
     <!-- session form view -->
     <record model="ir.ui.view" id="session_form_view">
@@ -105,10 +103,11 @@
         </field>
     </record>
     <record model="ir.actions.act_window" id="session_list_action">
-        <field name="name">Sessions</field>
+        <field name="name">Sessions - Titulo</field>
         <field name="res_model">openacademy.session</field>
         <field name="view_mode">tree,form</field>
     </record>
-    <menuitem id="session_menu" name="Sessions" parent="openacademy_menu" action="session_list_action"/>
+    <menuitem name="Sessions - M"   id="session_menu"     parent="openacademy_menu" action="session_list_action"/>
+
 
 </odoo>
