--- a/openacademy/views/views.xml
+++ b/openacademy/views/views.xml
@@ -1,201 +1,218 @@
 <odoo>
-	<record model="ir.ui.view" id="course_form_view">
-    	<field name="name">course.form</field>
-    	<field name="model">openacademy.course</field>
-    	<field name="arch" type="xml">
-			<form string="Course Form">
-				<sheet>
-					<group>
-						<field name="name"/>
-						<field name="responsible_id"/>
-					</group>
-				</sheet>
-				<notebook>
-					<page string="Description">
-						<field name="description"/>
-					</page>
-					<page string="About">
-						This is a example of notebooks
-					</page>
-					<page string="Courses">
-						<field name="session_ids" nolabel="1">
-							<tree string="Registered sessiones">
-								<field name="name"/>
-								<field name="instructor_id"/>
-							</tree>
-						</field>
-					</page>
-				</notebook>
-			</form>
-		</field>
-	</record>
+    <record model="ir.ui.view" id="course_form_view">
+        <field name="name">course.form</field>
+        <field name="model">openacademy.course</field>
+        <field name="arch" type="xml">
+            <form string="Course Form">
+                <sheet>
+                    <group>
+                        <field name="name"/>
+                        <field name="responsible_id"/>
+                    </group>
+                </sheet>
+                <notebook>
+                    <page string="Description">
+                        <field name="description"/>
+                    </page>
+                    <page string="About">
+                        This is a example of notebooks
+                    </page>
+                    <page string="Courses">
+                        <field name="session_ids" nolabel="1">
+                            <tree string="Registered sessiones">
+                                <field name="name"/>
+                                <field name="instructor_id"/>
+                            </tree>
+                        </field>
+                    </page>
+                </notebook>
+            </form>
+        </field>
+    </record>
 
-	<record model="ir.ui.view" id="course_list_view">
-		<field name="name">course.list</field>
-  		<field name="model">openacademy.course</field>
-  		<field name="arch" type="xml">
-    		<tree string="Course Tree">
-      			<field name="name" string="Name Tree"/>
-      			<field name="description"/>
-    		</tree>
-  		</field>
-	</record>
+    <record model="ir.ui.view" id="course_list_view">
+        <field name="name">course.list</field>
+        <field name="model">openacademy.course</field>
+        <field name="arch" type="xml">
+            <tree string="Course Tree">
+                <field name="name" string="Name Tree"/>
+                <field name="description"/>
+            </tree>
+        </field>
+    </record>
 
-	<record model="ir.ui.view" id="course_search_view">
-		<field name="name">course.search</field>
-  		<field name="model">openacademy.course</field>
-  		<field name="arch" type="xml">
-    		<search string="Course Search">
-    			<field name="name" string="Name Search"/>
-    			<field name="description"/>
-				<filter name="my_courses" string="My Courses" domain="[('responsible_id', '=', uid)]"/>
-				<group string="Group By">
-					<filter name="by_responsible" string="Responsible" context="{'group_by': 'responsible_id'}"/>
-				</group>
-    		</search>
-  		</field>
-	</record>
+    <record model="ir.ui.view" id="course_search_view">
+        <field name="name">course.search</field>
+        <field name="model">openacademy.course</field>
+        <field name="arch" type="xml">
+            <search string="Course Search">
+                <field name="name" string="Name Search"/>
+                <field name="description"/>
+                <filter name="my_courses" string="My Courses" domain="[('responsible_id', '=', uid)]"/>
+                <group string="Group By">
+                    <filter name="by_responsible" string="Responsible" context="{'group_by': 'responsible_id'}"/>
+                </group>
+            </search>
+        </field>
+    </record>
 
-	<record model="ir.actions.act_window" id="course_list_action">
-		<field name="name">Courses</field>
-		<field name="res_model">openacademy.course</field>
-		<field name="view_mode">tree,form</field>
-		<field name="context" eval="{'search_default_my_courses': 1}"/>
-		<field name="help" type="html">
-			<p class="oe_view_nocontent_create">Create the first course</p>
-		</field>
-	</record>
+    <record model="ir.actions.act_window" id="course_list_action">
+        <field name="name">Courses</field>
+        <field name="res_model">openacademy.course</field>
+        <field name="view_mode">tree,form</field>
+        <field name="context" eval="{'search_default_my_courses': 1}"/>
+        <field name="help" type="html">
+            <p class="oe_view_nocontent_create">Create the first course</p>
+        </field>
+    </record>
 
-	<menuitem name="Open Academy" id="main_openacademy_menu"/>
-	<menuitem name="Open Academy" id="openacademy_menu" parent="main_openacademy_menu"/>
-	<menuitem name="Courses" id="course_menu" parent="openacademy_menu" action="course_list_action"/>
+    <menuitem name="Open Academy" id="main_openacademy_menu"/>
+    <menuitem name="Open Academy" id="openacademy_menu" parent="main_openacademy_menu"/>
+    <menuitem name="Courses" id="course_menu" parent="openacademy_menu" action="course_list_action"/>
 
-	<record model="ir.ui.view" id="session_form_view">
-		<field name="name">session.form</field>
-		<field name="model">openacademy.session</field>
-		<field name="arch" type="xml">
-			<form string="Session Form">
-				<sheet>
-					<group>
-						<field name="name"/>
-						<field name="start_date"/>
-						<field name="end_date"/>
-						<field name="duration"/>
-						<field name="seats"/>
-						<field name="taken_seats" widget="progressbar"/>
-						<field name="instructor_id" widget="selection"/>
-						<field name="course_id" options="{'no_create':True, 'no_open': True}"/>
-						<label for="attendee_ids"/>
-						<field name="attendee_ids" nolabel="1"/>
-						<field name="active"/>
-						<field name="datetime_test"/>
-					</group>
-				</sheet>
-			</form>
-		</field>
-	</record>
+    <record model="ir.ui.view" id="session_form_view">
+        <field name="name">session.form</field>
+        <field name="model">openacademy.session</field>
+        <field name="arch" type="xml">
+            <form string="Session Form">
+                <sheet>
+                    <group>
+                        <field name="name"/>
+                        <field name="start_date"/>
+                        <field name="end_date"/>
+                        <field name="duration"/>
+                        <field name="seats"/>
+                        <field name="taken_seats" widget="progressbar"/>
+                        <field name="instructor_id" widget="selection"/>
+                        <field name="course_id" options="{'no_create':True, 'no_open': True}"/>
+                        <label for="attendee_ids"/>
+                        <field name="attendee_ids" nolabel="1"/>
+                        <field name="active"/>
+                        <field name="datetime_test"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
 
-	<record model="ir.ui.view" id="session_tree_view">
-		<field name="name">session.tree</field>
-		<field name="model">openacademy.session</field>
-		<field name="arch" type="xml">
-			<tree string="Session Tree" decoration-info="duration &lt; 5" decoration-danger="duration &gt; 15">
-				<field name="name"/>
-				<field name="start_date"/>
-				<field name="duration"/>
-				<field name="end_date"/>
-				<field name="seats"/>
-				<field name="instructor_id"/>
-				<field name="course_id"/>
-				<field name="taken_seats" widget="progressbar"/>
-			</tree>
-		</field>
-	</record>
+    <record model="ir.ui.view" id="session_tree_view">
+        <field name="name">session.tree</field>
+        <field name="model">openacademy.session</field>
+        <field name="arch" type="xml">
+            <tree string="Session Tree" decoration-info="duration &lt; 5" decoration-danger="duration &gt; 15">
+                <field name="name"/>
+                <field name="start_date"/>
+                <field name="duration"/>
+                <field name="end_date"/>
+                <field name="seats"/>
+                <field name="instructor_id"/>
+                <field name="course_id"/>
+                <field name="taken_seats" widget="progressbar"/>
+            </tree>
+        </field>
+    </record>
 
-	<record model="ir.ui.view" id="session_calendar_view">
-		<field name="name">session.calendar</field>
-		<field name="model">openacademy.session</field>
-		<field name="arch" type="xml">
-			<calendar string="Session Calendar" date_start="start_date" date_stop="end_date" color="instructor_id">
-				<field name="name"/>
-			</calendar>
-		</field>
-	</record>
+    <record model="ir.ui.view" id="session_calendar_view">
+        <field name="name">session.calendar</field>
+        <field name="model">openacademy.session</field>
+        <field name="arch" type="xml">
+            <calendar string="Session Calendar" date_start="start_date" date_stop="end_date" color="instructor_id">
+                <field name="name"/>
+            </calendar>
+        </field>
+    </record>
 
-	<record model="ir.ui.view" id="session_graph_view">
-		<field name="name">session.graph</field>
-		<field name="model">openacademy.session</field>
-		<field name="arch" type="xml">
-			<graph string="Participations by Courses">
-				<field name="course_id" type="row"/>
-				<field name="attendees_count" type="measure"/>
-			</graph>
-		</field>
-	</record>
+    <record model="ir.ui.view" id="session_graph_view">
+        <field name="name">session.graph</field>
+        <field name="model">openacademy.session</field>
+        <field name="arch" type="xml">
+            <graph string="Participations by Courses">
+                <field name="course_id" type="row"/>
+                <field name="attendees_count" type="measure"/>
+            </graph>
+        </field>
+    </record>
 
-	<record model="ir.ui.view" id="view_openacad_session_kanban">
-		<field name="name">openacad.session.kanban</field>
-		<field name="model">openacademy.session</field>
-		<field name="arch" type="xml">
-			<kanban default_group_by="instructor_id">
-				<field name="color"/>
-				<templates>
-					<t t-name="kanban-box">
-						<div
-								t-attf-class="oe_kanban_color_{{kanban_getcolor(record.color.raw_value)}}
-												oe_kanban_global_click_edit oe_semantic_html_override
-												oe_kanban_card {{record.group_fancy==1 ? 'oe_kanban_card_fancy' : ''}}">
-							<div class="oe_dropdown_kanban">
-								<!-- dropdown menu -->
-								<div class="oe_dropdown_toggle">
-									<i class="fa fa-bars fa-lg"/>
-									<ul class="oe_dropdown_menu">
-										<li>
-											<a type="delete">Delete</a>
-										</li>
-										<li>
-											<ul class="oe_kanban_colorpicker"
-												data-field="color"/>
-										</li>
-									</ul>
-								</div>
-								<div class="oe_clear"></div>
-							</div>
-							<div t-attf-class="oe_kanban_content">
-								<!-- title -->
-								Session name:
-								<field name="name"/>
-								<br/>
-								Start date:
-								<field name="start_date"/>
-								<br/>
-								duration:
-								<field name="duration"/>
-								<br/>
-								<field name="instructor_id"/>
-							</div>
-						</div>
-					</t>
-				</templates>
-			</kanban>
-		</field>
-	</record>
+    <record model="ir.ui.view" id="view_openacad_session_kanban">
+        <field name="name">openacad.session.kanban</field>
+        <field name="model">openacademy.session</field>
+        <field name="arch" type="xml">
+            <kanban default_group_by="instructor_id">
+                <field name="color"/>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div
+                                t-attf-class="oe_kanban_color_{{kanban_getcolor(record.color.raw_value)}}
+                                                oe_kanban_global_click_edit oe_semantic_html_override
+                                                oe_kanban_card {{record.group_fancy==1 ? 'oe_kanban_card_fancy' : ''}}">
+                            <div class="oe_dropdown_kanban">
+                                <!-- dropdown menu -->
+                                <div class="oe_dropdown_toggle">
+                                    <i class="fa fa-bars fa-lg"/>
+                                    <ul class="oe_dropdown_menu">
+                                        <li>
+                                            <a type="delete">Delete</a>
+                                        </li>
+                                        <li>
+                                            <ul class="oe_kanban_colorpicker"
+                                                data-field="color"/>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="oe_clear"></div>
+                            </div>
+                            <div t-attf-class="oe_kanban_content">
+                                <!-- title -->
+                                Session name:
+                                <field name="name"/>
+                                <br/>
+                                Start date:
+                                <field name="start_date"/>
+                                <br/>
+                                duration:
+                                <field name="duration"/>
+                                <br/>
+                                <field name="instructor_id"/>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
 
-	<record model="ir.ui.view" id="session_gantt_view">
-		<field name="name">session.gantt</field>
-		<field name="model">openacademy.session</field>
-		<field name="arch" type="xml">
-			<gantt string="Session Gantt" color="course_id" date_delay="hours" date_start="start_date" default_group_by='instructor_id' date_stop="end_date">
-				<field name="name"/>
-			</gantt>
-		</field>
-	</record>
+    <record model="ir.ui.view" id="session_gantt_view">
+        <field name="name">session.gantt</field>
+        <field name="model">openacademy.session</field>
+        <field name="arch" type="xml">
+            <gantt string="Session Gantt" color="course_id" date_delay="hours" date_start="start_date" default_group_by='instructor_id' date_stop="end_date">
+                <field name="name"/>
+            </gantt>
+        </field>
+    </record>
 
-	<record model="ir.actions.act_window" id="session_list_action">
-		<field name="name">Sessions</field>
-		<field name="res_model">openacademy.session</field>
-		<field name="view_mode">tree,form,calendar,graph,kanban,gantt</field>
-	</record>
+    <record model="ir.actions.act_window" id="session_list_action">
+        <field name="name">Sessions</field>
+        <field name="res_model">openacademy.session</field>
+        <field name="view_mode">tree,form,calendar,graph,kanban,gantt</field>
+    </record>
 
-	<menuitem name="Sessions" id="session_menu" parent="openacademy_menu" action="session_list_action"/>
+    <menuitem name="Sessions" id="session_menu" parent="openacademy_menu" action="session_list_action"/>
+
+    <record model="ir.ui.view" id="wizard_form_view">
+        <field name="name">wizard.form</field>
+        <field name="model">openacademy.wizard</field>
+        <field name="arch" type="xml">
+            <form string="Add Attendees">
+                <group>
+                    <field name="session_id"/>
+                    <field name="attendee_ids"/>
+                </group>
+            </form>
+        </field>
+    </record>
+    
+    <act_window id="launch_session_wizard" name="Add Attendees" 
+    src_model="openacademy.session" res_model="openacademy.wizard" view_mode="form" 
+    target="new" key2="client_action_multi" />
 </odoo>
