--- a/openacademy/views/openacademy.xml
+++ b/openacademy/views/openacademy.xml
@@ -11,6 +11,7 @@
                         <field name="start_date"/>
                         <field name="duration"/>
                         <field name="seats"/>
+                        <field name="taken_seats" widget="progressbar"/>                    
                     </group>
                 </sheet>
             </form>
@@ -26,5 +27,6 @@
     <menuitem id="session_menu" name="Sessions"
               parent="openacademy_menu"
               action="session_list_action"/>
+
 
 </odoo>
