--- a/openacademy/views/partner.xml
+++ b/openacademy/views/partner.xml
@@ -2,6 +2,7 @@
     <record model="ir.ui.view" id="partner_instructor_form_view">
         <field name="name">partner.instructor</field>
         <field name="model">res.partner</field>
+        <field name="priority">100</field>
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
             <notebook position="inside">
